# aizo-project1

./: A_results.csv  B_results.csv  CMakeLists.txt  C_results.csv  README.md  data.txt  make_report_charts.py  omega_results.csv  results.csv  run_research.py  stack_results.csv
results/report/tables/: A_summary.csv  B_summary.csv  C_summary.csv  alpha_quick_summary.csv  alpha_shell_summary.csv  omega_summary.csv
results/research/: A_results.csv  B_results.csv  C_results.csv  alpha_results.csv  omega_results.csv  results.csv  results2.csv
results/tests/: final_test.csv  out.txt  test.csv
src/: BinarySearchTree.cpp  BinarySearchTree.h  BucketSorter.cpp  BucketSorter.h  CsvReportWriter.cpp  CsvReportWriter.h  DoublyLinkedList.cpp  DoublyLinkedList.h  DynamicArray.cpp  DynamicArray.h  FileLoader.cpp  FileLoader.h  QuickSort.cpp  QuickSort.h  QuickSorter.cpp  QuickSorter.h  ShellSorter.cpp  ShellSorter.h  SinglyLinkedList.cpp  SinglyLinkedList.h  SortChecker.cpp  SortChecker.h  Stack.cpp  Stack.h  TemplateArray.h  TemplateQuickSort.h  Timer.cpp  Timer.h  main.cpp  main.h
src/algorithms/: BucketSorter.cpp  BucketSorter.h  QuickSort.cpp  QuickSort.h  QuickSorter.cpp  ShellSorter.cpp  ShellSorter.h  SortChecker.cpp  SortChecker.h  TemplateQuickSort.h  TemplateSortChecker.h
src/research/: ResearchRunner.cpp  ResearchRunner.h  TypeResearch.cpp  TypeResearch.h
src/structures/: BinarySearchTree.cpp  BinarySearchTree.h  DoublyLinkedList.cpp  DoublyLinkedList.h  DynamicArray.cpp  DynamicArray.h  LinearStructure.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Stack.cpp  Stack.h  TemplateArray.h
